# curses-jni-lib

./: ChangeLog  DISCLAIMER  INSTALL  META  Makefile.am  README.md  configure.ac  jcurses_version.h.in  libjcurses.map  llnl-curses-jni-libs.spec.in
src/native/: Toolkit.c
